# youtube-summary

./: .docstr.yaml  .gitignore  .pre-commit-config.yaml  AI-TODO.md  README.md  pyproject.toml
ai_xp/: database.py  entrypoint.py  llm_proxy.py  log.py  montage_tool.py  scrapper.py  transcript.py  utils.py  youtube_history.py
notebooks/: 28min-9avril.ipynb  count_transcripts.ipynb  dl_yt.ipynb  dl_yt_2.ipynb  dumont.ipynb  fetcher.ipynb  fetcher_1.ipynb  fetcher_2.ipynb  github-issue-320.ipynb  good_prompt.ipynb  parse_youtube_history.ipynb  scrap_youtube_html.ipynb  scratch.ipynb  too_lazy_too_watch.ipynb  transcript-improve.ipynb  transcript_database.ipynb  visualize_database.ipynb
resources/docs/: issue-expat-error-github.md
resources/examples/: example_youtube_html.html  example_youtube_html_2.html  mistral-ai-summary.md
resources/inputs/: 2025-04-06.json  2025-04-07.json  2025-04-09.json  2025-04-10.json  2025-04-11.json  2025-04-12.json
resources/prompts/: prompts.toml
scripts/: clean_err_files.sh
tests/: test_yt_identifier.py
